fix overflow-w in main browser

--- a/apps/web/app/page.scss
+++ b/apps/web/app/page.scss
@@ -7,6 +7,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x: hidden;
+}
+
 .page-root{
   // @include resize-root-padding;
 }
